# CommandCore2026

./: .env.example  .gitignore  README.md  pyproject.toml
app/: bus.py  events.py  main.py  orchestrator.py  schemas.py  settings.py
docs/prompts/: codex_master_prompt.md
docs/research/: jarvis_local_research.md
memory/: journal_store.py  sqlite_store.py
tests/unit/: test_cli.py  test_journal_store.py  test_routing.py  test_schemas.py
ui/desktop/: main.py
