[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis2026"
version = "0.1.0"
description = "Local-first multi-agent desktop assistant inspired by Jarvis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JARVIS2026 Team"}
]
keywords = ["ai", "agents", "assistant", "local", "llm", "desktop"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PySide6>=6.5,<7.0",
    "faster-whisper>=0.10,<1.0",
    "piper-tts>=1.2,<2.0",
    "pyttsx3>=2.90,<3.0",
    "python-dotenv>=1.0,<2.0",
    "ollama>=0.1,<1.0",
    "requests>=2.31,<3.0",
    "aiohttp>=3.8,<4.0",
    "asyncio-contextmanager>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.5,<2.0",
    "black>=23.0,<24.0",
    "isort>=5.12,<6.0",
    "pre-commit>=3.3,<4.0",
    "ipython>=8.15,<9.0",
]

llm = [
    "llama-cpp-python>=0.2,<1.0",
    "gpt4all>=2.0,<3.0",
]

stt = [
    "faster-whisper>=0.10,<1.0",
    "vosk>=0.3.45,<0.4",
]

tts = [
    "piper-tts>=1.2,<2.0",
    "pyttsx3>=2.90,<3.0",
]

wake = [
    "openwakeword>=0.5,<1.0",
    "pyaudio>=0.2.13,<0.3",
]

all = [
    "jarvis2026[dev,llm,stt,tts,wake]",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/jarvis2026"
"Documentation" = "https://github.com/yourusername/jarvis2026/docs"
"Repository" = "https://github.com/yourusername/jarvis2026.git"
"Bug Tracker" = "https://github.com/yourusername/jarvis2026/issues"

[tool.hatch.version]
path = "jarvis2026/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app", "agents", "providers", "tools", "memory", "ui", "tests", "scripts", "docs", "config", "workspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov=agents",
    "--cov=providers",
    "--cov=tools",
    "--cov=memory",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
    "slow: Slow tests",
    "requires_ollama: Tests that require Ollama running",
    "requires_audio: Tests that require audio hardware",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W503",   # line break before binary operator
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "agents", "providers", "tools", "memory", "ui", "tests", "scripts"]
known-third-party = ["pydantic", "pyside6", "faster_whisper"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "F401",  # imported but unused
    "F811",  # redefined while unused
]
"__init__.py" = [
    "F401",  # imported but unused
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "faster_whisper",
    "pysideX.*",
    "piper_tts",
    "pyttsx3",
    "ollama",
    "vosk",
    "openwakeword",
    "pyaudio",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]
known_first_party = ["app", "agents", "providers", "tools", "memory", "ui", "tests", "scripts"]
known_third_party = ["pydantic", "pyside6", "faster_whisper"]

[tool.coverage.run]
branch = true
source = ["app", "agents", "providers", "tools", "memory"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.version_info",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*Protocol.*:",
]
precision = 2
show_missing = true

[tool.pydantic-settings]
case_sensitive = false
env_file = ".env"
env_file_encoding = "utf-8"
